add support for revisionhistorylimit
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -26,6 +26,10 @@ global:
 ##
 replicaCount: 1
 
+## Number of old replicasets to retain ##
+## The default value is 10, 0 will garbage-collect old replicasets ##
+revisionHistoryLimit: 10
+
 ## restart policy for all containers
 ##
 restartPolicy: Always
