[kube-prometheus-stack] Implement Gateway API
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -28,6 +28,31 @@ alertmanager:
       logLevel: {{ print "debug" | quote }}
 
 prometheus:
+  gatewayAPI:
+    httpRoute:
+      enabled: true
+      annotations:
+        key: value
+      labels:
+        key: value
+
+      hostnames:
+      - my-filter.example.com
+      parentRefs:
+      - name: acme-gw
+
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
+
+      filters:
+        - type: RequestHeaderModifier
+          requestHeaderModifier:
+            set:
+              - name: my-header-name
+                value: my-new-header-value
+
   prometheusSpec:
     additionalConfig:
       logFormat: json
