[CI] install Gateway API CRDs for chart tests
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -44,5 +44,8 @@ jobs:
         uses: helm/kind-action@v1.10.0
         if: steps.list-changed.outputs.changed == 'true'
 
+      - name: Apply Gateway API CRDs
+        run: kubectl apply -k https://github.com/kubernetes-sigs/gateway-api/config/crd
+
       - name: Run chart-testing (install)
         run: ct install --config .github/linters/ct.yaml
