[prometheus-elasticsearch-exporter]: follows the new Helm Standard Labels recommendations
Signed-off-by: Hoan Lac <hoan.lac@outlook.com>

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -2,22 +2,22 @@
 ## This allows to set the same values for the imagePullSecrets, obviating the need
 ## to set the same values for each chart (and image) separately
 global:
-## Allow either an array of {name: pullSecret} maps (k8s-style), or an array of strings (more common helm-style).
-##  imagePullSecrets:
-##  - name: pullSecret1
-##  - name: pullSecret2
-##
-## or
-##
-##  imagePullSecrets:
-##  - pullSecret1
-##  - pullSecret2
-##
-## or a templated value
-##
-##    imagePullSecrets:
-##    - "{{ .Values.templateValue }}"
-##  templateValue: test
+  ## Allow either an array of {name: pullSecret} maps (k8s-style), or an array of strings (more common helm-style).
+  ##  imagePullSecrets:
+  ##  - name: pullSecret1
+  ##  - name: pullSecret2
+  ##
+  ## or
+  ##
+  ##  imagePullSecrets:
+  ##  - pullSecret1
+  ##  - pullSecret2
+  ##
+  ## or a templated value
+  ##
+  ##    imagePullSecrets:
+  ##    - "{{ .Values.templateValue }}"
+  ##  templateValue: test
 
   imagePullSecrets: []
   imageRegistry: ""
@@ -67,7 +67,8 @@ log:
   format: logfmt
   level: info
 
-resources: {}
+resources:
+  {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
@@ -260,10 +261,11 @@ serviceMonitor:
   ## If true, a ServiceMonitor CRD is created for a prometheus operator
   ## https://github.com/coreos/prometheus-operator
   ##
-  enabled: false
+  enabled: true
   apiVersion: "monitoring.coreos.com/v1"
   #  namespace: monitoring
-  labels: {}
+  labels:
+    release: kube-prometheus-stack
   interval: 10s
   jobLabel: ""
   scrapeTimeout: 10s
@@ -296,7 +298,8 @@ prometheusRule:
   enabled: false
   #  namespace: monitoring
   labels: {}
-  rules: []
+  rules:
+    []
     # - record: elasticsearch_filesystem_data_used_percent
     #   expr: |
     #     100 * (elasticsearch_filesystem_data_size_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"} - elasticsearch_filesystem_data_free_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"})
