--- a/charts/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/cert-secret.yaml
@@ -4,10 +4,7 @@ kind: Secret
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}-cert
   labels:
-    chart: {{ template "elasticsearch-exporter.chart" . }}
-    app: {{ template "elasticsearch-exporter.name" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "elasticsearch-exporter.labels" . | nindent 4 }}
 type: Opaque
 data:
   ca.pem: {{ .Values.es.ssl.ca.pem | b64enc }}
