--- a/charts/prometheus-elasticsearch-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/serviceaccount.yaml
@@ -4,10 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
   labels:
-    chart: {{ template "elasticsearch-exporter.chart" . }}
-    app: {{ template "elasticsearch-exporter.name" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "elasticsearch-exporter.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
