--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -302,8 +302,7 @@ prometheusRule:
   enabled: false
   #  namespace: monitoring
   labels: {}
-  rules:
-    []
+  rules: []
     # - record: elasticsearch_filesystem_data_used_percent
     #   expr: |
     #     100 * (elasticsearch_filesystem_data_size_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"} - elasticsearch_filesystem_data_free_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"})
