Insert commonLabels and uncomment namespace fields
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -89,6 +89,9 @@ podAnnotations: {}
 
 podLabels: {}
 
+## Labels to attach to all resources
+commonLabels: {}
+
 affinity: {}
 
 initContainers: []
@@ -266,7 +269,7 @@ serviceMonitor:
   ##
   enabled: false
   apiVersion: "monitoring.coreos.com/v1"
-  #  namespace: monitoring
+  namespace: ""
   labels: {}
     # release: kube-prometheus-stack
   interval: 10s
@@ -299,7 +302,7 @@ prometheusRule:
   ##
   ## The rules will be processed as Helm template, allowing to set variables in them.
   enabled: false
-  #  namespace: monitoring
+  namespace: ""
   labels: {}
   rules: []
     # - record: elasticsearch_filesystem_data_used_percent
