--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -267,8 +267,8 @@ serviceMonitor:
   enabled: false
   apiVersion: "monitoring.coreos.com/v1"
   #  namespace: monitoring
-  labels:
-    release: kube-prometheus-stack
+  labels: {}
+    # release: kube-prometheus-stack
   interval: 10s
   jobLabel: ""
   scrapeTimeout: 10s
