syseleven/add_smon_to_alertmanager - Add servicemonitor resource
In order to automatically monitor alertmanager with prometheus and
prometheus operator we need a servicemonitor resource.

Signed-off-by: Bernd May <b.may@syseleven.de>

--- a/charts/alertmanager/templates/servicemonitor.yaml
+++ b/charts/alertmanager/templates/servicemonitor.yaml
@@ -1,4 +1,7 @@
 {{- if .Values.serviceMonitor.enabled }}
+{{- if not ( .Capabilities.APIVersions.Has "monitoring.coreos.com/v1" ) }}
+{{- fail "Cluster API resources do not include monitoring.coreos.com/v1! Please install prometheus-operator CRDs first." }}
+{{- end }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
