--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -3,9 +3,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-crds:
-  enabled: false
-
 replicaCount: 1
 
 # Number of old history to retain to allow rollback
@@ -25,8 +22,7 @@ extraArgs: {}
 
 ## Additional Alertmanager Secret mounts
 # Defines additional mounts with secrets. Secrets must be manually created in the namespace.
-extraSecretMounts:
-  []
+extraSecretMounts: []
   # - name: secret-files
   #   mountPath: /etc/secrets
   #   subPath: ""
@@ -58,8 +54,7 @@ schedulerName: ""
 
 podSecurityContext:
   fsGroup: 65534
-dnsConfig:
-  {}
+dnsConfig: {}
   # nameservers:
   #   - 1.2.3.4
   # searches:
@@ -69,8 +64,7 @@ dnsConfig:
   #   - name: ndots
   #     value: "2"
   #   - name: edns0
-hostAliases:
-  []
+hostAliases: []
   # - ip: "127.0.0.1"
   #   hostnames:
   #   - "foo.local"
@@ -255,8 +249,7 @@ serviceMonitor:
 ingress:
   enabled: false
   className: ""
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -313,8 +306,7 @@ ingressPerReplica:
     #
     prefix: "alertmanager"
 
-resources:
-  {}
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -346,8 +338,7 @@ podAntiAffinityTopologyKey: kubernetes.io/hostname
 
 ## Topology spread constraints rely on node labels to identify the topology domain(s) that each Node is in.
 ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
-topologySpreadConstraints:
-  []
+topologySpreadConstraints: []
   # - maxSkew: 1
   #   topologyKey: failure-domain.beta.kubernetes.io/zone
   #   whenUnsatisfiable: DoNotSchedule
@@ -369,8 +360,7 @@ podAnnotations: {}
 podLabels: {}
 
 # Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
-podDisruptionBudget:
-  {}
+podDisruptionBudget: {}
   # maxUnavailable: 1
   # minAvailable: 1
 
@@ -389,8 +379,7 @@ persistence:
     - ReadWriteOnce
   size: 50Mi
 
-configAnnotations:
-  {}
+configAnnotations: {}
   ## For example if you want to provide private data from a secret vault
   ## https://github.com/banzaicloud/bank-vaults/tree/main/charts/vault-secrets-webhook
   ## P.s.: Add option `configMapMutation: true` for vault-secrets-webhook
@@ -403,8 +392,7 @@ configAnnotations:
 
 config:
   enabled: true
-  global:
-    {}
+  global: {}
     # slack_api_url: ''
 
   templates:
@@ -451,20 +439,17 @@ configmapReload:
   extraArgs: {}
 
   ## Optionally specify extra list of additional volumeMounts
-  extraVolumeMounts:
-    []
+  extraVolumeMounts: []
     # - name: extras
     #   mountPath: /usr/share/extras
     #   readOnly: true
 
   ## Optionally specify extra environment variables to add to alertmanager container
-  extraEnv:
-    []
+  extraEnv: []
     # - name: FOO
     #   value: BAR
 
-  securityContext:
-    {}
+  securityContext: {}
     # capabilities:
     #   drop:
     #   - ALL
@@ -477,21 +462,18 @@ templates: {}
 #   alertmanager.tmpl: |-
 
 ## Optionally specify extra list of additional volumeMounts
-extraVolumeMounts:
-  []
+extraVolumeMounts: []
   # - name: extras
   #   mountPath: /usr/share/extras
   #   readOnly: true
 
 ## Optionally specify extra list of additional volumes
-extraVolumes:
-  []
+extraVolumes: []
   # - name: extras
   #   emptyDir: {}
 
 ## Optionally specify extra environment variables to add to alertmanager container
-extraEnv:
-  []
+extraEnv: []
   # - name: FOO
   #   value: BAR
 
