[prometheus-elasticsearch-exporter] Bump chart api version, min kubernetes version, set standard labels (#4636)
* [prometheus-elasticsearch-exporter]: Prevent Duplicate Labels in ServiceMonitor

Signed-off-by: Hoan Lac <hoan.lac@outlook.com>

* [prometheus-elasticsearch-exporter]: bump chart version

Signed-off-by: Hoan Lac <hoan.lac@outlook.com>

* [prometheus-elasticsearch-exporter]: follows the new Helm Standard Labels recommendations

Signed-off-by: Hoan Lac <hoan.lac@outlook.com>

* Update charts/prometheus-elasticsearch-exporter/templates/_helpers.tpl

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Update charts/prometheus-elasticsearch-exporter/templates/_helpers.tpl

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Hoan Lac <96110829+hlac9x@users.noreply.github.com>

* Add note in README

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Bump chart api version

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Update NOTES

Signed-off-by: zeritti <47476160+zeritti@

--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -3,10 +3,7 @@ kind: Deployment
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
   labels:
-    chart: {{ template "elasticsearch-exporter.chart" . }}
-    app: {{ template "elasticsearch-exporter.name" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "elasticsearch-exporter.labels" . | nindent 4 }}
   {{- with .Values.deployment.labels }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
@@ -19,8 +16,7 @@ spec:
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
-      app: {{ template "elasticsearch-exporter.name" . }}
-      release: "{{ .Release.Name }}"
+      {{- include "elasticsearch-exporter.selectorLabels" . | nindent 6 }}
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -29,8 +25,10 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "elasticsearch-exporter.name" . }}
-        release: "{{ .Release.Name }}"
+        {{- include "elasticsearch-exporter.selectorLabels" . | nindent 8 }}
+        {{- with .Values.commonLabels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
