--- a/charts/prometheus-json-exporter/values.yaml
+++ b/charts/prometheus-json-exporter/values.yaml
@@ -210,3 +210,14 @@ extraInitContainers: []
 extraArgs: []
 #  - name: --config.file
 #    value: /app/config/myconfig.yml
+
+# Extra manifests to deploy as an array
+extraManifests: []
+  # - |
+  #   apiVersion: v1
+  #   kind: ConfigMap
+  #   metadata:
+  #   labels:
+  #     name: prometheus-json-exporter-extra
+  #   data:
+  #     extra-data: "value"
